# quawk

./: .gitignore  .gitmodules  AGENTS.md  BUILD.md  CHANGELOG.md  CI.md  CLI.md  CONTRIBUTING.md  EXECUTION.md  GRAMMAR.md  LICENSE  PLAN.md  POSIX.md  README.md  SPEC.md  STANDARDS.md  STRATEGY.md  TASKS.md  TESTING.md  TEST_SPEC.md  flake.nix  main.py  pyproject.toml  repo-refactor.md  testing-refactor.md
.github/workflows/: ci-fast.yml  ci.yml  compat-reference.yml  compat-upstream.yml
docs/: agent-workflow.md  benchmark.md  compatibility-evaluations.md  compatibility.md  current-ast.asdl  design.md  future.md  getting-started.md  grammar-alignment.md  grammar-conformance-checklist.md  grammar.ebnf  performance-implementation.md  performance-optimization.md  quawk-as-of-P4.asdl  quawk.asdl  quawk.ebnf  release-checklist.md  roadmap-archive.md  roadmap.md  testing.md
docs/history/: repo-refactor.md  testing-refactor.md
docs/plans/: agent-workflow-doc-alignment-plan.md  backend-gap-inventory.md  claimed-value-fallback-cleanup.md  claimed-value-fallback-matrix.md  direct-path-removal-plan.md  distribution-plan.md  document-test-cleanup-plan.md  execution-completeness-matrix.md  execution-completeness-plan.md  expression-surface-decision-table.md  expression-surface-widening-analysis.md  host-runtime-boundary-audit.md  implementation-readability-refactor-plan.md  parser-ebnf-conformance-plan.md  parser-ebnf-coverage-inventory.md  performance-implementation.md  remaining-posix-compatibility-plan.md  residual-host-runtime-matrix.md  runtime-performance-gap-closure.md
examples/: hello.awk
examples/noaa-climate-report/: README.md  climate_report.awk
scripts/: benchmark_noaa_runtime_gap.py  benchmark_numeric_loop_fast_path.py  benchmark_optimized_vs_unoptimized.py  benchmark_runtime_fast_paths.py  benchmark_slot_vs_hash.py  check_phase_gate.py  profile_runtime_hot_paths.py  upstream_compat.py
src/aster.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/quawk/: README.md  __init__.py  __main__.py  architecture_audit.py  ast.py  ast_format.py  ast_walk.py  builtins.py  cli.py  corpus.py  diagnostics.py  jit.py  lexer.py  local_scalar_residency.py  normalization.py  parser.py  phase_gate.py  runtime_support.py  semantics.py  slot_allocation.py  source.py  type_inference.py  upstream_audit.py  upstream_compat.py  upstream_divergence.py  upstream_inventory.py  upstream_suite.py
tests/: conftest.py  test_architecture_audit.py  test_ast_walk.py  test_backend_gap_inventory.py  test_backend_ir_builder.py  test_cli.py  test_compat_corpus.py  test_corpus.py  test_corpus_differential.py  test_execution_inspection_parity.py  test_execution_model_docs.py  test_jit.py  test_lexer.py  test_local_numeric_storage_lowering.py  test_local_scalar_mem2reg_optimization.py  test_local_scalar_residency_classification.py  test_main.py  test_noaa_climate_report_example.py  test_normalization.py  test_p10_compat_baselines.py  test_p10_grammar_alignment.py  test_p11_supported_compatibility_corpus.py  test_p11_upstream_compatibility_slice.py  test_p11_upstream_compatibility_subset.py  test_p12_release_smoke.py  test_p1_mvp.py  test_p1_slice.py  test_p2_assignment.py  test_p2_control_flow.py  test_p2_numeric.py  test_p2_records.py  test_p3_mixed_programs.py  test_p4_expressions.py  test_p4_regex.py  test_p5_functions_semantics.py  test_p6_arrays.py  test_p7_posix_core_frontend.py  test_p8_runtime_baselines.py  test_p9_backend_parity.py  test_parser.py  (+86 more)
tests/architecture/: audit.toml
tests/conformance/: begin_assignment.awk  begin_assignment.toml  begin_boolean_expr.awk  begin_boolean_expr.toml  begin_if_less.toml  begin_print_literal.toml  begin_while_loop.toml  control_flow_terms.awk  control_flow_terms.toml  expression_pattern.toml  expression_surface.awk  expression_surface.toml  fields_delete.awk  fields_delete.toml  function_surface.awk  function_surface.toml  (+7 more)
(+146 files in other folders)
