[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "quawk"
version = "0.1.0"
description = "Quawk AWK compiler"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
quawk = "quawk.cli:main"
corpus = "quawk.corpus:main"

[dependency-groups]
dev = [
    "mypy>=1.18,<2",
    "pytest>=8.4,<9",
    "ruff>=0.13,<0.14",
    "yapf>=0.43,<0.44",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quawk = ["runtime/*.c", "runtime/*.h"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "corpus: compatibility corpus coverage",
    "property: reserved for property-based tests",
    "smoke: reserved for smoke coverage",
]

[tool.ruff]
target-version = "py314"
line-length = 120
preview = true

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
dedent_closing_brackets = true
split_before_first_argument = true
