[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "quawk"
version = "0.1.0"
description = "Quawk AWK compiler"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
quawk = "quawk.cli:main"
corpus = "quawk.compat.corpus:main"
quawk-upstream = "quawk.compat.upstream_compat:main"

[dependency-groups]
dev = [
    "mypy>=1.18,<2",
    "pytest>=8.4,<9",
    "pytest-xdist>=3.8,<4",
    "ruff>=0.13,<0.14",
    "yapf>=0.43,<0.44",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quawk = ["runtime/*.c", "runtime/*.h"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto"
markers = [
    "core: default fast repo test surface excluding compatibility suites",
    "docs_contract: documentation and workflow contract checks selected by marker-based suite runs",
    "roadmap_contract: documentation-only roadmap assertions, skipped by default unless QUAWK_RUN_ROADMAP_TESTS=1",
    "compat: full compatibility suite coverage, including corpus and differential checks",
    "compat_reference: reference-engine differential compatibility coverage",
    "compat_corpus: repo-owned supplemental compatibility corpus coverage",
    "corpus: single-engine compatibility corpus coverage",
    "property: reserved for property-based tests",
    "smoke: reserved for smoke coverage",
]

[tool.ruff]
target-version = "py314"
line-length = 120
preview = true
exclude = ["third_party"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/quawk/backend/lower_builtins.py" = ["E501"]
"src/quawk/backend/lower_expr.py" = ["E501"]
"src/quawk/backend/lower_lvalue.py" = ["E501"]
"src/quawk/backend/lower_stmt.py" = ["E501"]

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
dedent_closing_brackets = true
split_before_first_argument = true
